# EDA-ReversiGame

./: CMakeLists.txt  README.md  ai.cpp  ai.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
